--- a/src/index.css
+++ b/src/index.css
@@ -404,3 +404,10 @@ body .modal {
     font-size: 2.4rem;
     text-align: right;
 }
+
+.footer {
+    display: flex;
+    margin-top: 220px;
+    justify-content: flex-end;
+    margin-right: 15px;
+}
