--- a/src/index.css
+++ b/src/index.css
@@ -407,7 +407,7 @@ body .modal {
 
 .footer {
     display: flex;
-    margin-top: 220px;
+    margin-top: 13.5%;
     justify-content: flex-end;
     margin-right: 15px;
 }
